# minimalPythonPackage

./: README.md  pyproject.toml  setup.py
examplepkg/: humans.py  zoo.py
script/: script1.py  script2.py
